tests/invalid/runtime/shift_range_int.pts
function main() : void {
    int a = 1;
    int s = 64;
    int b = a << s;
    Sys.print(b.toString());
}
